# evolvo

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/agents/: staff-architect-self-evolving-software.md  staff-build-engineer.md  staff-feedback.md  staff-product-manager.md
.claude/commands/: add-tauri-command.md  bundle-size.md  check.md  feedback-queue.md
.claude/rules/common/: git-workflow.md  product-invariants.md
.claude/rules/frontend/: leptos.md
.claude/rules/rust/: conventions.md
.claude/rules/tauri/: commands.md
.claude/skills/evolvo/: SKILL.md
.claude/skills/noide-workspace/: SKILL.md
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: agent.rs  bundle.rs  commands.rs  lib.rs  lineage.rs  main.rs  plan.rs  runner.rs  sandbox.rs  stages.rs  state.rs  store.rs  types.rs  validators.rs
app/ui/: Cargo.toml  Trunk.toml  index.html  styles.css
app/ui/scripts/: trunk-build.sh  trunk-dev.sh
app/ui/src/: app.rs  canvas.rs  feedback_panel.rs  interop.rs  main.rs  shell.rs  toolbar.rs  types.rs  voice.rs
docs/: feedback-types.html
examples/: pomodoro.md
prompts/: README.md  implementation.md  iteration_guidance.md  new_app_banner.md
prompts/phases/: bootstrap.md  consolidation.md  maturation.md  shaping.md
prompts/stages/: README.md  backend_impl.md  backend_plan.md  e2e_impl.md  e2e_plan.md  final_review.md  frontend_impl.md  frontend_plan.md  golden_plan.json
prompts/work_steps/: bootstrap.md  maturation.md  new_app.md  shaping.md
templates/integrations/: README.md
templates/integrations/file_picker/: README.md  deps.toml  host.rs  ui.rs
templates/integrations/google_oauth/: README.md  deps.toml  host.rs  ui.rs
templates/integrations/http_json/: README.md  deps.toml  host.rs  ui.rs
templates/integrations/openrouter/: README.md  deps.toml  host.rs  session.rs  ui.rs
templates/integrations/sqlite/: README.md  deps.toml  host.rs
templates/integrations/webhook_ingest/: README.md  deps.toml  host.rs
