[package]
name = "noide_desktop"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "NoIDE — white canvas feedback + sandbox desktop app"

[lib]
name = "noide_desktop"
path = "src/lib.rs"

[[bin]]
name = "noide_desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3.14"
