[package]
name = "noide_ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "noide_ui"
path = "src/main.rs"

[dependencies]
console_error_panic_hook = "0.1"
js-sys = "0.3"
leptos = { version = "0.8", default-features = false, features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "AddEventListenerOptions",
    "Blob",
    "BlobEvent",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "ClipboardEvent",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "Document",
    "DomRect",
    "DragEvent",
    "Event",
    "EventTarget",
    "File",
    "FileList",
    "FileReader",
    "HtmlAnchorElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlImageElement",
    "HtmlInputElement",
    "HtmlTextAreaElement",
    "ImageData",
    "KeyboardEvent",
    "MediaDevices",
    "MediaRecorder",
    "MediaRecorderOptions",
    "MediaStream",
    "MediaStreamConstraints",
    "MediaStreamTrack",
    "MouseEvent",
    "Navigator",
    "ResizeObserver",
    "ResizeObserverEntry",
    "Url",
    "Window",
] }
